Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-03-11 Perry
 PATCH:  [ 1447539 ] Add explanatory comment to CCrystalTextBuffer::MoveLine
  Src/editlib: ccrystaltextbuffer.cpp

2006-03-10 Kimmp
 Remove unneeded splash image (Splash2.bmp) as noted in Patch item #1441392
  Src/res removed file: Splash2.bmp

2006-03-10 Perry
 PATCH: [ 1445434 ] SyntaxColors scrambling reg values
  Src: SyntaxColors.cpp
  
2006-03-10 WinMerge experimental release 2.5.3.4 (cvs)

2006-03-09 Kimmo
 PATCH: [ 1445996 ] Fix wrong PgDown scrolling after mousescroll
  Src/editlib: ccrystaltextview2.cpp
 BUG: [ 1446648 ] cvs trunk doesn't compile
  Src: Splash.cpp

2006-03-08 Kimmo
 PATCH: [ 1441392 ] New Splash Screen
  Submitted by Alexander Skinner
  Src: Splash.cpp
  Src/res: splash1.bmp

2006-03-08 Perry
 Update MakeResDll readme with current information (MSVC.Net 2003 works
  now), and better explanation of how to pick a specific version.
  MakeResDll: readme.txt
 PATCH: [ 1443391 ] Update MakeResDll for VS.NET 2005
  MakeResDll: MakeResDll.cpp MakeResDll.dsp MakeResDll.rc
   StdAfx.cpp StdAfx.h readme.txt resource.h
  New MakeResDll: Merge.ico VsVersionDlg.cpp VsVersionDlg.h
 Bump MakeResDll version from 1.0.6.0 to 1.0.7.0.
  MakeResDll: MakeResDll.rc
 PATCH: [ 1442844 ] Make GetFileExt easier to understand
  Src: MergeDoc.cpp MergeDoc.h
 Add two minor comments to PropRegistry.
  PropRegistry.cpp

2006-03-06 WinMerge experimental release 2.5.3.3 (cvs)

2006-03-06 Perry
 BUG: [ 1444211 ] bug in current SelectFile
  Src: Merge.cpp
 PATCH: [ 1443841 ] Add header comment to Src/Changes.txt
  Src: Changes.txt

2006-03-06 Tim
 BUG: [ 1442866 ] German RC format error
  Src/Languages/German: MergeGerman.rc
 BUG: [ 1442865 ] languages lack generate patch & report bitmaps
  Src/Languages/*: Merge*.rc

2006-03-06 Perry
 PATCH: [ 1435361 ] Fix and cleanup project file code